[package]
name = "no"
version = "0.1.0"
authors = ["Julian Ollivieira"]
edition = "2021"
description = "a very basic text editor written in rust"
readme = "README.md"
homepage = "https://github.com/julianollivieira/no"
repository = "https://github.com/julianollivieira/no"
license = "MIT"
keywords = ["text-editor"]
categories = ["text-editors"]

[dependencies]
libc = "0.2.147"
